# profilodemo

./: build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/profilodemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  test.cpp
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/profilodemo/: ExampleUnitTest.java
buildscript/: common_config.gradle  module_upload_config_library.gradle
fbjni/: build.gradle  gradle.properties
fbjni/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
mmapbuf/: build.gradle  gradle.properties
mmapbuf/src/main/: AndroidManifest.xml
mmapbuf/src/main/cpp/: CMakeLists.txt
profilo/: build.gradle  gradle.properties
profilo/src/main/: AndroidManifest.xml
profilo/src/main/cpp/: CMakeLists.txt
